--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
-  "name": "astro-playground",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^4.5.8",
-    "@astrojs/check": "^0.5.9",
-    "typescript": "^5.4.3"
+  "devDependencies": {
+    "astro-eslint-parser": "^0.16.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-astro": "^0.32.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
