--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
   ],
   "dependencies": {
     "@sanity/vision": "^3.35.2",
+    "latest": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-is": "^18.2.0",
     "sanity": "^3.35.2",
     "styled-components": "^6.0.7"
